         | | | ||  \/  || |    |___ \   ___ \ \      / /|  ___|| \ | |
         | | | || |\/| || |      __) | / _ \ \ \ /\ / / | |_   |  \| |
         | |_| || |  | || |___  / __/ | (_) | \ V  V /  |  _|  | |\  |
          \___/ |_|  |_||_____||_____| \___/   \_/\_/   |_|    |_| \_|
                 http://www.service-technology.org/uml2owfn/


Version 1.11-unreleased
=======================

* Cleaned the autotools configuration files and added options to directly
  compile binaries for different platforms.

Version 1.10
============

* fixed a bug in handling filenames, UML2oWFN can now process files in other
  directories than the current working directory

* added parameter `-a orJoin' to translate process for soundness analysis
  assuming an implicit OR-join on the control-flow

* added parameter `-a wfNet' to translate processes into Aalst-workflow-nets,
  the translation assumes an AND-join on all end- and stop-nodes of the
  process

* added new analysis switch `-a removePinsets' that relaxes the process
  termination semantics by requiring that only the control-flow terminates,
  but that data may still be pending at the process output, and added new
  `scripts/Makefile' target `translateweak' that uses the `-a removePinsets'
  option,

* added parameter `-a safe' to check for safeness of a net using LoLA with
  state predicates, this parameter can be used together with `-a soundness'

* added parameter `-p anon' to anonymize the process output by enumerating
  places (p1, p2, ...) and transitions (t1, t2, ...) before writing to disk

* added log file output for translation, with parameter "-p log" a log file
  (name "uml2owfn_<inputfile>.log") with entries of the form "process name;
  translation successful;reason-for-fail;number of nodes, number of edges,
  average number of incoming edges, average number of outgoing edges" is
  written

* added checks for free-choice nets and for workflow-nets (each node is on a