@@ -1,5 +1,8 @@
 @heading Version 1.11-unreleased
 @itemize
+@item Changed the standard soundness verification procedures to the more efficient
+liveness property verification algorithm of LoLA. To use the old CTL model checking
+procedures use parameter @samp{-p ctl}.
 @item Cleaned the autotools configuration files and added options to directly compile binaries for different platforms.
 @end itemize
 
